# IGVC_Lane_Detector

./: CMakeLists.txt  README.md  changes.txt  lanes.cpp  makefile  out.txt  package.xml  quad_regr.cpp  shifting_parabola.cpp
include/lane_detector/: .lanes_way.hpp.swp  lanes.hpp  lanes_backup.hpp  lanes_chalne_wala.hpp  lanes_new.hpp  lanes_way.hpp  slic.h
launch/: lane_detector.launch
src/: .lanes_way.cpp.swp  lanes.cpp  lanes_chalne_wala.cpp  lanes_chalne_wala_siddhant.cpp  lanes_new.cpp  lanes_siddhu.cpp  lanes_way (copy).cpp  lanes_way.cpp  test.cpp
src/trash/: lane1.cpp  lanes_back.cpp  lanes_final.cpp  lanes_makh.cpp  lanes_makhs.cpp  laserScan2mat.cpp
